--- a/app/static/css/components/modals.css
+++ b/app/static/css/components/modals.css
@@ -2,7 +2,7 @@
 .modal {
     display: none;
     position: fixed;
-    z-index: 2000;
+    z-index: 200;
     left: 0;
     top: 0;
     width: 100%;
